--- a/priv/ansible/group_vars/development.yml
+++ b/priv/ansible/group_vars/development.yml
@@ -5,8 +5,10 @@ app_path: "{{app_dir}}/{{app_name}}"
 app_server_name: _
 app_db_host: localhost
 app_db_user_pass: md53548dd4d99be6cf8a98894d919f84c29
+app_db_user_pass_plain: teachbase
 app_db_user: teachbase
 
+pg_db: teachbase_dev
 
 db_ram_shared: 512
 db_ram_cache: 256
