--- a/priv/ansible/roles/aws_cli/tasks/aws_credentials.yml
+++ b/priv/ansible/roles/aws_cli/tasks/aws_credentials.yml
@@ -1,7 +1,9 @@
 - name: create aws credentials
-  sudo: no
+  sudo: yes
+  sudo_user: {{deploy_user}}
   file: path="~/.aws" state=directory
 
 - name: create aws credentials
-  sudo: no
+  sudo: yes
+  sudo_user: {{deploy_user}}
   template: src=config.j2 dest="~/.aws/config"
