--- a/priv/ansible/roles/erly/tasks/main.yml
+++ b/priv/ansible/roles/erly/tasks/main.yml
@@ -1,4 +1,5 @@
 - include: os_tune.yml tags=erly_os_tune
 - include: ip_tables.yml tags=erly_ip
 - include: erly_service.yml tags=erly_service
+- include: ssh_keys.yml tags=erly_ssh
 - include: erly.yml tags=erly_prepare
