--- a/priv/ansible/roles/tb_prepare/tasks/main.yml
+++ b/priv/ansible/roles/tb_prepare/tasks/main.yml
@@ -1,20 +1,2 @@
-- name: Make project dir
-  command: mkdir -p {{ app_dir }}/{{ app_name }}
-
-- name: Make sockets dir
-  command: mkdir -p {{ app_path }}/shared/tmp/sockets
-
-- name: Make config dir
-  command: mkdir -p {{ app_path }}/shared/config
-
-- name: Copy database.yml
-  template: src={{ item }}.j2 dest={{ app_dir }}/{{ app_name }}/shared/config/{{ item }}
-  with_items:
-    - database.yml
-    - secrets.yml
-
-- name: Setup ownership for project dir
-  command: chown -R {{ deploy_user }} {{ app_dir }}/{{ app_name }}
-
-- name: Setup rights for project dir
-  command: chmod -R g+w {{ app_dir }}/{{ app_name }}
+- include: appdir.yml tags=tb_prepare
+- include: configs.yml tags=tb_configs
