--- a/priv/ansible/roles/erly/defaults/main.yml
+++ b/priv/ansible/roles/erly/defaults/main.yml
@@ -1,13 +1,22 @@
 erly_path: "{{ app_dir }}/erly"
 erly_release: "{{ app_dir }}/erly_release"
 erly_bin_path: "{{ erly_release }}/bin"
-erly_bin_name: "erlyvideo"
+erly_bin_name: erly
 erly_repo: git@github.com:webils/erly.git
 erly_version: "master"
 erly_rtmp_port: 1935
 erly_http_port: 8082
 erly_host: "{{ inventory_hostname }}"
 erly_key_file: /home/{{ deploy_user }}/.ssh/id_rsa
+erly_node_name: erly
+erly_cookie: erly_dev
+erly_force_clean: false
+erly_configs:
+  - { src: 'reltool.config.j2', dest: "{{ erly_path }}/reltool.config" }
+  - { src: 'erlyvideo.conf.j2', dest: "{{ erly_path }}/priv/erlyvideo.conf" }
+  - { src: 'tb.conf.j2', dest: "{{ erly_path }}/apps/teachbase/priv/tb.conf" }
+  - { src: 'app.config.j2', dest: "{{ erly_path }}/files/app.config" }
+  - { src: 'vm.args.j2', dest: "{{ erly_path }}/files/vm.args" }
 
 teachbase_auth_token: ""
 teachbase_api_key: ""
@@ -18,4 +27,4 @@ teachbase_file_upload_path: "http://{{ teachbase_http_host }}/documents"
 teachbase_file_poll_path: "http://{{ teachbase_http_host }}/conversions/poll"
 teachbase_aws_bucket: devtbupload
 teachbase_aws_dir: recordings_dev
-teachbase_debug_mode: false
+teachbase_debug_mode: "false"
