--- a/priv/ansible/selectel.yml
+++ b/priv/ansible/selectel.yml
@@ -18,4 +18,4 @@
     - { role: 'palkan.nginx', tags: ['nginx'] }
     - { role: 'tb_prepare', tags: ['tb_prepare'] }
     - { role: 'erly', tags: ['erly'] }
-
+    - { role: 'alekseenkoss77.monit', tags: ['monit'] }
